<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FoodChoo</string>
    <string name="branch_key" translatable="false">key_live_iDlWK5RRcKpeRsBWAg7nUhlkzBageSEz</string>
    <string name="branch_key_test" translatable="false">key_test_cvlZT5PNbQeoRry8yn1p3kijrzmnbGxL</string>
    <string name="google_maps_key" translatable="false">AIzaSyAVwyKaZ6NFVTM5kVpAGElJKFfND5pH8yk</string>
    <string name="asset_statements" translatable="false">
        [{
            \"include\": \"https://eater.foodchoo.com/.well-known/assetlinks.json\"
        }]
    </string>
    <string name="version">"Version: "</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="shake_listening_title">Shake to open</string>
    <string name="shake_listening_text">Shake your phone to open the app</string>
    <string name="shake_listen_channel_name">Shake Listener</string>
    <string name="shake_listen_channel_desc">Listens for a shake after a notification.</string>
    <string name="shake_detected_title">Shake detected</string>
    <string name="shake_launching_app">Launching FoodChoo...</string>
    <string name="shake_launch_channel_name">Shake Launch</string>
    <string name="shake_launch_channel_desc">Alerts used to bring the app to the foreground after a shake.</string>
    <string name="shake_prompt_text">Shake your phone to open FoodChoo</string>
    <string name="shake_prompt_title">Shake to open FoodChoo</string>
    <string name="shake_prompt_message">Give your phone a quick shake to jump straight into the app.</string>
    <string name="shake_prompt_dismiss">Maybe later</string>
    <string name="shake_accessibility_icon">Phone shake icon</string>
    <string name="shake_no_orders">No menus are available right now.</string>
    <string name="shake_distance_unknown">Distance n/a</string>
    <string name="shake_eta_template">%1$d min away</string>
    <string name="shake_eta_unknown">ETA n/a</string>
    <string name="shake_distance_eta_template">%1$s • %2$s</string>
    <string name="shake_unknown_establishment">Unknown establishment</string>
    <string name="shake_unknown_product">Menu item</string>
    <string name="shake_error_loading">Couldn\'t load menus</string>
    <string name="shake_need_location">Turn on FoodChoo to update your location.</string>
    <string name="shake_location_unavailable">Unable to fetch location. There are drivers nearby.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account_">Create Account</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_">Email Address*</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_my_account">Create My Account</string>
    <string name="error_enter_email">Please provide a valid Email Address.</string>
    <string name="error_enter_f_name">Please provide First Name.</string>
    <string name="error_enter_l_name">Please provide Last Name.</string>
    <string name="hint_email">abc@example.com</string>
    <string name="hint_password_">8 characters min</string>
    <string name="lost_password">LOST PASSWORD</string>
    <string name="please_enter">For verification we will send you a 4 digit access code via email, please don\'t forget to check your spam</string>
    <string name="please_enter_pc">Please enter your old and new password.</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="error_enter_o_password">Please enter old password</string>
    <string name="error_enter_n_password">Please enter new password</string>
    <string name="error_enter_c_password">Please confirm password</string>
    <string name="account">Create your foodchoo account</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="f_name_hint">Dave</string>
    <string name="l_name_hint">Smith</string>
    <string name="phone">Phone</string>
    <string name="phone_no">Phone Number</string>
    <string name="location">Location</string>
    <string name="country">Country</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invite_code">Invite Code</string>
    <string name="already">Already have an account?</string>
    <string name="by">By signing up, you agree with our</string>
    <string name="create_influencer_profile">you agree to be bound by our Eater Influencer</string>
    <string name="by_continuing">By continuing, you agree to our</string>
    <string name="terms">Terms of Services</string>
    <string name="and">and</string>
    <string name="policy">Privacy Policy</string>
    <string name="error_length_password">Password should have 12 to 16 characters.</string>
    <string name="error_phone_valid">Please provide a valid Phone Number.</string>
    <string name="error_match_password">New password and confirm password does not match.</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="no_active_orders">No active orders right now</string>
    <string name="select_country">Please select country first!</string>
    <string name="sign_up_">Signup</string>
    <string name="search_here">Search here</string>
    <string name="country_">Select Country</string>
    <string name="e_wallet_recharge">E-Wallet Recharge</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_title">Your internet connection is..meh</string>
    <string name="no_internet_message">Tap the button. We dare you.</string>
    <string name="no_internet_retry">Try again</string>
    <string name="no_internet_settings">Open Wi-Fi settings</string>
    <string name="no_internet_retry_pending">Still offline - double-check your connection.</string>
    <string name="confirm_account">Confirm your account</string>
    <string name="c_acc_text">For verification we have sent you a 4 digit\naccess code via email, please don\'t forget\n to check your spam</string>
    <string name="enter_code">Enter code here</string>
    <string name="resend_code">Resend Code</string>
    <string name="success_verify">Verification Code Sent\nplease check email</string>
    <string name="account_created">Account created successfully</string>
    <string name="error_enter_code">Please provide otp code</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">First, let\'s ask you what sort of food you like, Tastes change: You can always change this later!</string>
    <string name="items_remain">items remaining</string>
    <string name="sorry_">Sorry!</string>
    <string name="special_delivery">Special delivery instructions</string>
    <string name="text_count">&#160;/ 255</string>
    <string name="back_to_map">Back to map</string>
    <string name="someone_else_grab">Someone else grabbed this menu deal!</string>
    <string name="image_copyright">© Illumination Entertainment, Universal Pictures</string>
    <string name="food_intolerance">OK, any food intolerances?</string>
    <string name="food_text">You can change this later if you need to</string>
    <string name="home">Home</string>
    <string name="home_"><u>Home</u></string>
    <string name="my_orders">My orders</string>
    <string name="chat">Chat</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="refund_history">Refund History</string>
    <string name="share_for_bonuses">SHARE FOR BONUSES</string>
    <string name="share">Share</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="influencer">Influencer</string>
    <string name="become_influencer">Become an Influencer</string>
    <string name="start_influencing">Start Influencing</string>
    <string name="become_eater_influencer">Become an Eater Influencer</string>
    <string name="your_referral_link">Unique Referral Link</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="signups_this_week">Signups This Week</string>
    <string name="purchased_this_week">Menus Sold This Week</string>
    <string name="signups_last_month">Signups Last Month</string>
    <string name="purchased_last_month">Menus Sold Last Month</string>
    <string name="commision_earned_">Commision Earned 💸</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="upload_your_driving_license">Upload Your Driving License</string>
    <string name="please_verify">Please verify your identity \n for smooth signup</string>
    <string name="verify_persona">Verify with persona</string>
    <string name="last_step_where">Last step! We need to know where to send your commissions.</string>
    <string name="any_wrong_info">ANY WRONG INFO MEANS WE CAN\'T PAY YOU! Please check all details, ok?</string>
    <string name="bank_name_imp">Bank Name*</string>
    <string name="apply_again_in">Apply again in&#160;</string>
    <string name="id_verified">ID Verified</string>
    <string name="bank_name">Bank Name</string>
    <string name="continue_with_email">Continue with email</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="close"><u>Close</u></string>
    <string name="close_">Close</string>
    <string name="create_using_google">Create using Google</string>
    <string name="send_magic_link_title">What\'s your email</string>
    <string name="send_magic_link_email_hint">Email address</string>
    <string name="messages">Messages</string>
    <string name="manage_allergen">Manage Allergen</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account_security">Account security</string>
    <string name="title_legal_stuff">Legal stuff</string>
    <string name="send">Send</string>
    <string name="email_verification_detail">We sent an email to %1$s.\nTap the link in that email to continue.\n\nAnd check spam folder in case your email provider hates us for some reason.</string>
    <string name="open_mail_app">Open Mail App</string>
    <string name="email_verification_title">%s \nYou got mail!</string>
    <string name="resend_magic_link"><u>Resend magic link</u></string>
    <string name="title_email_success">Wake up babe, new email address dropped!</string>
    <string name="email_success_detail">You\'ve successfully verified your new email address of:\n%s</string>
    <string name="feed_me">Great now feed me</string>
    <string name="select_option">Select how you would like to proceed</string>
    <string name="use_passkey">Use Passkey</string>
    <string name="hint_search_country">Search country</string>
    <string name="title_select_country">Select Country</string>
    <string name="clear_search">Clear search</string>
    <string name="phone_verified_title">Phone verified!</string>
    <string name="phone_verified_description">Your phone number has been successfully verified.</string>
    <string name="error_loading_countries">Failed to load countries</string>
    <string name="btn_retry">Retry</string>
    <string name="no_results_found">No results found</string>
    <string name="change_password_desc">We’ll send a magic link to \n%s.\n\nTap the link in that email to be able to open the app and enter your new password.\n\nOh – and check the spam folder in case your email provider hates us for some reason.</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_now">Send Now</string>
</resources>