<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/new_dimen_24_dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/email_verification_title"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/standard_title_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEmailDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/new_standard_margin"
        android:fontFamily="@font/monstreat_medium"
        android:gravity="start"
        android:text="@string/email_verification_detail"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/standard_sub_title_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOpenMailApp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/new_dimen_20_dp"
        android:background="@drawable/button_rounded_black"
        android:fontFamily="@font/monstreat_medium"
        android:gravity="center"
        android:text="@string/open_mail_app"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvResendMagicLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/new_standard_margin"
        android:padding="@dimen/new_dimen_10_sp"
        android:layout_gravity="center"
        android:drawablePadding="@dimen/new_dimen_10_dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/resend_magic_link"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/standard_title_size" />

</LinearLayout>
