<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/new_dimen_24_dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/reset_password"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/standard_title_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password_desc"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/standard_size"
        android:textSize="@dimen/standard_sub_title_size" />

    <!-- Change Password Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_dimen_48_dp"
        android:layout_marginTop="@dimen/new_dimen_24_dp"
        android:background="@drawable/button_rounded_black"
        android:text="@string/send_now"
        android:textColor="@color/defaultButtonTextColor"
        android:textSize="@dimen/standard_sub_title_size" />

</LinearLayout>
