<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_top_curves"
    android:paddingBottom="@dimen/new_dimen_24_dp">

    <!-- Header -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/new_dimen_24_dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/manage_allergen"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/txt_mediumX"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/ivClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="@dimen/new_dimen_30_dp"
        android:layout_height="@dimen/new_dimen_30_dp"
        android:layout_marginEnd="@dimen/new_dimen_30_dp"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <!-- Loading -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/new_dimen_48_dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <!-- Allergy RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAllergies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/new_dimen_24_dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:itemCount="4"
        tools:listitem="@layout/item_allergy" />

    <!-- Save Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="@dimen/new_dimen_48_dp"
        android:layout_marginHorizontal="@dimen/new_dimen_20_dp"
        android:background="@drawable/button_rounded_black"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/defaultButtonTextColor"
        android:textSize="@dimen/txt_mediumXX"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvAllergies" />

</androidx.constraintlayout.widget.ConstraintLayout>
